--- a/public/index.html
+++ b/public/index.html
@@ -113,9 +113,9 @@
                             <li>
                                 <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
                                     href="#">
-                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
-                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                        stroke-linejoin="round">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16"
+                                        height="16" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
                                         <circle cx="12" cy="7" r="4"></circle>
                                     </svg>
@@ -125,9 +125,9 @@
                             <li>
                                 <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
                                     href="#">
-                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
-                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                        stroke-linejoin="round">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16"
+                                        height="16" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
                                         <circle cx="9" cy="7" r="4"></circle>
                                         <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
@@ -139,9 +139,9 @@
                             <li>
                                 <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
                                     href="#">
-                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
-                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                        stroke-linejoin="round">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16"
+                                        height="16" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M3 18v-6a9 9 0 0 1 18 0v6"></path>
                                         <path
                                             d="M21 19a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3zM3 19a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2H3z">
@@ -153,9 +153,9 @@
                             <li>
                                 <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
                                     href="#">
-                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
-                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                        stroke-linejoin="round">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16"
+                                        height="16" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
                                         <polyline points="16 18 22 12 16 6"></polyline>
                                         <polyline points="8 6 2 12 8 18"></polyline>
                                     </svg>
@@ -165,9 +165,9 @@
                             <li>
                                 <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
                                     href="#">
-                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
-                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                        stroke-linejoin="round">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16"
+                                        height="16" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
                                         <line x1="4" y1="21" x2="4" y2="14"></line>
                                         <line x1="4" y1="10" x2="4" y2="3"></line>
                                         <line x1="12" y1="21" x2="12" y2="12"></line>
@@ -213,20 +213,7 @@
         </section>
         <div class="border-b bg-white">
             <div class="container mx-auto px-8">
-                <div class="py-6 flex flex-wrap justify-center md:items-center">
-                    <a class="block px-4 py-1 rounded-md border border-gray-300 bg-gray-100 m-1 text-gray-800 hover:bg-white hover:border-gray-500 hover:text-gray-900"
-                        href="#">MeetUp</a>
-                    <a class="block px-4 py-1 rounded-md border border-gray-300 bg-gray-100 m-1 text-gray-800 hover:bg-white hover:border-gray-500 hover:text-gray-900"
-                        href="#">Leap</a>
-                    <a class="block px-4 py-1 rounded-md border border-gray-300 bg-gray-100 m-1 text-gray-800 hover:bg-white hover:border-gray-500 hover:text-gray-900"
-                        href="#">Recruiting mission</a>
-                    <a class="block px-4 py-1 rounded-md border border-gray-300 bg-gray-100 m-1 text-gray-800 hover:bg-white hover:border-gray-500 hover:text-gray-900"
-                        href="#">VanHackathon</a>
-                    <a class="block px-4 py-1 rounded-md border border-gray-300 bg-gray-100 m-1 text-gray-800 hover:bg-white hover:border-gray-500 hover:text-gray-900"
-                        href="#">Premium-only webinar</a>
-                    <a class="block px-4 py-1 rounded-md border border-gray-300 bg-gray-100 m-1 text-gray-800 hover:bg-white hover:border-gray-500 hover:text-gray-900"
-                        href="#">Webinar</a>
-                </div>
+                <div class="py-6 flex flex-wrap justify-center md:items-center" data-role="event-types"></div>
             </div>
         </div>
         <section class="py-10 border-b border-gray-200">
@@ -514,8 +501,8 @@
                 </div>
                 <div class="px-4 text-xs py-2 bg-gray-200 text-gray-700 hidden" data-prop="date"></div>
                 <div class="p-4 text-sm">
-                    <div class="flex items-center pt-2">
-                        <div class="w-4 mr-2">
+                    <div class="flex items-center pt-2 pb-3 md:pb-0">
+                        <div class="w-4 mr-2 hidden md:block">
                             <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
                                 height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
                                 stroke-linejoin="round">
@@ -524,10 +511,9 @@
                             </svg>
                         </div>
                         <div class="flex-1 flex items-center">
-                            <div class="text-gray-700">Type</div>
-                            <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
-                            <span
-                                class="inline-block text-xs rounded-full bg-orange-100 text-orange-700 border border-orange-500 px-2 leading-normal font-medium"
+                            <div class="text-gray-700 hidden md:block">Type</div>
+                            <span class="flex-1 border-t-2 border-gray-300 border-dotted mx-2 hidden md:block"></span>
+                            <span class="inline-block text-xs rounded-full border px-2 leading-normal font-medium"
                                 data-prop="category"></span>
                         </div>
                     </div>
@@ -541,8 +527,8 @@
                             </svg>
                         </div>
                         <div class="flex-1 flex items-center">
-                            <div class="text-gray-700">Location</div>
-                            <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
+                            <div class="text-gray-700 hidden md:block">Location</div>
+                            <span class="flex-1 border-t-2 border-gray-300 border-dotted mx-2 hidden md:block"></span>
                             <div class="font-medium" data-render-prop="location"></div>
                         </div>
                     </div>
@@ -556,8 +542,8 @@
                             </svg>
                         </div>
                         <div class="flex-1 flex items-center">
-                            <div class="text-gray-700">Deadline</div>
-                            <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
+                            <div class="text-gray-700 hidden md:block">Deadline</div>
+                            <span class="flex-1 border-t-2 border-gray-300 border-dotted mx-2 hidden md:block"></span>
                             <div class="font-medium" data-render-prop="deadline"></div>
                         </div>
                     </div>
@@ -576,16 +562,20 @@
     </template>
 
     <template id="eventDetails">
-        <div class="event-details w-full flex flex-col max-h-full items-stretch overflow-y-auto">
-            <div class="event-details__body flex flex-col items-stretch max-h-full">
+        <div class="event-details w-full md:flex md:flex-col md:items-stretch md:max-h-full md:overflow-y-auto">
+            <div class="event-details__body md:flex md:flex-col md:items-stretch md:max-h-full">
                 <div class="px-10 py-4 relative z-20 shadow md:flex md:items-center">
-                    <div class="md:w-1/4">
-                        <img class="w-full h-auto rounded shadow" data-render-prop="thumbnail" />
+                    <div class="md:w-2/6">
+                        <div class="pt-6 pb-4 md:pt-4">
+                            <img class="w-full h-auto rounded shadow-md" data-render-prop="thumbnail" />
+                        </div>
                     </div>
-                    <div class="md:w-3/4 md:pl-6">
+                    <div class="md:w-4/6 md:pl-6">
+                        <span class="inline-block text-xs rounded-full border px-2 leading-normal font-medium mb-2"
+                            data-prop="category"></span>
                         <h2 class="text-2xl font-medium" data-render-prop="title"></h2>
                         <div class="text-gray-700 mt-2" data-prop="date"></div>
-                        <div class="pt-2 pb-4">
+                        <div class="pt-2">
                             <div class="flex items-center pt-2">
                                 <div class="w-4 mr-2">
                                     <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24"
@@ -596,8 +586,8 @@
                                     </svg>
                                 </div>
                                 <div class="flex-1 flex items-center">
-                                    <div class="text-gray-700">Location</div>
-                                    <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
+                                    <div class="text-gray-700 hidden md:block">Location</div>
+                                    <span class="flex-1 border-t-2 border-gray-300 border-dotted mx-2 hidden md:block"></span>
                                     <div class="font-medium" data-render-prop="location"></div>
                                 </div>
                             </div>
@@ -611,18 +601,22 @@
                                     </svg>
                                 </div>
                                 <div class="flex-1 flex items-center">
-                                    <div class="text-gray-700">Deadline</div>
-                                    <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
+                                    <div class="text-gray-700 hidden md:block">Deadline</div>
+                                    <span class="flex-1 border-t-2 border-gray-300 border-dotted mx-2 hidden md:block"></span>
                                     <div class="font-medium" data-render-prop="deadline"></div>
                                 </div>
                             </div>
                         </div>
+                        <div class="py-2 md:hidden">
+                            <button class="block w-full text-center py-3 px-10 bg-blue-500 text-blue-100 font-medium rounded hover:bg-blue-700"
+                                data-action="apply">Apply now</button>
+                        </div>
                     </div>
                 </div>
-                <div class="event-details__description text-base overflow-y-auto flex-1 p-10 bg-gray-100 relative z-10"
+                <div class="event-details__description text-base p-10 bg-gray-100 md:relative md:z-10 md:overflow-y-auto md:flex-1"
                     data-render-prop="description"></div>
             </div>
-            <div class="event-details__actions border-t border-gray-300 px-10 h-20 flex items-center justify-center">
+            <div class="event-details__actions border-t border-gray-300 px-10 py-6 flex items-center justify-center md:py-0">
                 <button class="block py-3 px-10 bg-blue-500 text-blue-100 font-medium rounded hover:bg-blue-700"
                     data-action="apply">Apply now</button>
             </div>
@@ -635,15 +629,20 @@
             <div class="absolute top-0 bottom-0 z-20 w-full md:w-3/4" role="document">
                 <div class="w-full h-screen bg-white shadow-xl">
                     <button type="button"
-                        class="text-4xl absolute z-20 top-0 right-0 mt-2 mr-2 flex items-center justify-center w-10 h-10 rounded-full text-gray-600 hover:bg-gray-100 hover:text-gray-800"
+                        class="relative z-20 flex items-center justify-center w-full text-gray-600 py-2 shadow md:shadow-none hover:text-white hover:bg-blue-500 md:hover:bg-gray-100 md:hover:text-gray-800 md:py-0 md:w-10 md:h-10 md:rounded-full md:absolute md:z-20 md:top-0 md:right-0 md:mt-2 md:mr-2"
                         data-dismiss="modal" aria-label="Close">
-                        <span class="block font-thin leading-none pb-1" aria-hidden="true">&times;</span>
+                        <span class="block font-thin leading-none pb-1 text-4xl" aria-hidden="true">&times;</span>
+                        <span class="block ml-2 font-medium md:hidden">Close</span>
                     </button>
-                    <div class="flex h-full relative z-10" data-role="modal-content"></div>
+                    <div class="relative z-10 h-full overflow-y-auto pb-12 md:pb-0 md:flex" data-role="modal-content"></div>
                 </div>
             </div>
             <div class="absolute w-full h-full top-0 left-0 bg-gray-900 opacity-75 z-10"></div>
         </div>
+    </template>
+
+    <template id="eventType">
+        <button class="block px-4 py-1 rounded border m-1"></button>
     </template>
 
     <script type="text/javascript" src="main.js"></script>
